--- a/public/css/main.less
+++ b/public/css/main.less
@@ -54,11 +54,17 @@ index {
             font-size: 16px;
             text-align: left;
             padding-bottom: 10px;
+            padding-left:5px;
         }
         border: 1px solid thistle;
     }
 }
 
+#userPage {
+    .content-4 { 
+        padding-top: 0;
+    }
+}
 
 .content-29 {
     padding-top: 0;
