--- a/public/css/main.less
+++ b/public/css/main.less
@@ -64,6 +64,10 @@ index {
     .content-4 { 
         padding-top: 0;
     }
+
+    #reviewsArea {
+        margin-top: 30px;
+    }
 }
 
 .content-29 {
@@ -72,5 +76,18 @@ index {
 
     h3 { 
         padding-bottom: 0;
+    }
+}
+
+#reviewsArea {
+    #newReviewForm {
+        min-width: 50%;
+        textarea {
+            width: 100%;
+            resize: vertical;
+        }
+        button {
+            width: 100%;
+        }
     }
 }
