--- a/public/views/index.erb
+++ b/public/views/index.erb
@@ -64,7 +64,7 @@
                                     <input id='pfTitle' type="text" name='title' class="form-control" placeholder='What do you need? Plumber, Babysitter, iPhone, etc'>
                                     <input id='pfAddress' type="text" name='where' class="form-control autocompleteAddress" placeholder='Where do you need it?'>
                                     <% unless user_email %>
-                                    <input id='pfContact' type="text" name='contact' class="form-control" placeholder='Your email'>
+                                    <input id='pfContact' type="text" name='email' class="form-control" placeholder='Your email'>
                                     <% end %>
                                     <!-- <a class="btn btn-inverse" href="#">Learn More</a>
                                     <a class="btn btn-danger" href="#">Buy Now for $9</a> -->
