--- a/public/views/user.erb
+++ b/public/views/user.erb
@@ -1,101 +1,64 @@
 <% 
 tg = target_user 
-reviews_of_user = Reviews.of_target(tg._id)
+tg.email ||= tg.contact
+
+locals.reviews_of_user = reviews_of_user = Reviews.of_target(tg._id)
 prop_title = {
-    photo: 'Main Photo',
+    name: 'Name',
+    #img: 'Main Photo',
     desc: 'Description',
     total_score: 'Total Score',
     num_reviews: 'Reviews Count',    
     website: 'Website',
-    facebook_page: 'FB page'
+    fb_page: 'FB page',
+    email: 'Email',
+    phone: 'Phone'
 }
 prop_text = { #or mkup
-    desc: 'Seller is a great guy',
+    desc: tg.desc,
+    #img: '<img src="'+tg.img+'">',
     total_score: 10+20,
     num_reviews: reviews_of_user.size.to_s+' reviews',
     website: "<a target='_blank' href=#{tg.website}>#{tg.website}</a>",
-    facebook_page: "<a target='_blank' href=#{tg.facebook_page}>#{tg.facebook_page}</a>" 
+    fb_page: "<a target='_blank' href=#{tg.fb_page}>#{tg.fb_page}</a>" 
 }
 
-def should_skip(p,u)
+def should_skip(p,u) #property, user
     tg = u #target user
-    p = p.to_s
-    #return true if p=='website' && !tg.website
-    #return true if p=='facebook_page' && !tg.facebook_page
+    p = p.to_sym
+    return !tg[p.to_s] if OPTIONAL_PROPS.include? p
     return false
 end
 
+OPTIONAL_PROPS = [:img, :name, :desc, :email, :phone, :website, :fb_page]
+
 props = prop_title.merge(prop_text).keys
+#To add: address, reviews given, #offers made, time on site, verifications
 %>
 <user-page id='userPage'>
-
+<input type='hidden' value='<%=tg._id%>' id='target_user_id'>
 
 <div class="features">
-                    <div class="container">
+                    <div class="container">                        
                         <div class="row">
-
                             <% props.each do |prop| %> 
                                 <% next if should_skip(prop,tg) %>
                                 <div class="col-sm-4">
                                     <h6><%= prop_title[prop] || prop %></h6>
-                                    <%= prop_text[prop] %>
+                                    <%= prop_text[prop] || tg[prop.to_s] %>
                                 </div>
                             <% end %>
                         </div>
 
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6>Other data</h6>
-                                #reviews given, #offers made, time on site 
-                            </div>
-                            <div class="col-sm-4 col-sm-offset-1">
-                                <h6>Contact</h6>
-                                Address, Email, Phone, Other                                
-                            </div>
-                            <div class="col-sm-3 col-sm-offset-1">
-                                <h6>Verifications</h6>
-                                Verified by site, verified over phone, background check made. 
-                            </div>
-                        </div>
+                    <%= erb :user_reviews, locals: locals %>                        
 
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <h6>Review #1</h6>
-                                He was good
-                            </div>
-                            <div class="col-sm-4 col-sm-offset-1">
-                                <h6>Review #2</h6>
-                                He was great
-                            </div>
-                            <div class="col-sm-3 col-sm-offset-1">
-                                <h6>Review #3</h6>
-                                Super great! 
-                            </div>
-                        </div>
+                    <% if user && target_user._id == user._id %>
+                        <%= erb :edit_user_data_form, locals: locals %> 
+                    <% end %>
+                    </div end-container>
 </div>
 
-        <h2> data of user </h2>
-        <user-page class="full-page row">
-            <div class="col-md-4"><p>Name: <%= target_user.name || '' %></p></div>
-            <div class="col-md-4"><p>Email: <%= target_user.email || '' %></p></div>
-            <div class="col-md-4"><p>User page </p></div>
-            <div class="col-md-4"><p>User page </p></div>
-            <div class="col-md-4"><p>User page 0</p></div>
-            <div class="col-md-4"><p>User page 1</p></div>
-            <div class="col-md-4"><p>User page 2</p></div>
-        </user-page>
-
-        <% if target_user._id == user._id %>
-        <h1> Edit Data of user </h1>
-      <form id='userData' method='POST' action=<%='/user/'+target_user._id%>>
-        <input type='text' name='name' value='<%= target_user.name %>'>
-        <input type='url' name='fb_page' value='<%= target_user.fb_page %>'>
-        <input type='url' name='website' value='<%= target_user.website %>'>
-        <textarea type='text' name='about_me'><%= target_user.about_me %></textarea>
-        <textarea type='text' name='public_contact_details'><%= target_user.public_contact_details %></textarea>
-        <button>Submit</button>
-      </form>
-      <% end %>
-      <%= erb :user_reviews, locals: locals %>
+        
+      
 
 </user-page id='userPage'>
