--- a/public/views/index.erb
+++ b/public/views/index.erb
@@ -114,7 +114,7 @@
                         <label class="h6">Looking for:</label>
                         <input id='sfTitle' type="text" class="form-control">
                         <label class="h6">Where?</label>
-                        <input id='sfAddress' type="text" class="form-control autocompleteAddress">
+                        <input id='sfAddress' type="text" class="form-control">
                         <% unless user_email %>
                         <label class="h6">Your Email</label>
                         <input id='sfContact' class="form-control">
