--- a/public/css/main.less
+++ b/public/css/main.less
@@ -91,3 +91,29 @@ index {
         }
     }
 }
+
+#search {
+    .header-6-sub {
+        padding-top: 40px;
+    }
+
+    .content-2 {
+        padding-top: 30px;
+    }
+    #searchForm {
+        .form-control {
+            min-width: 36%;
+        }
+    }
+    #foundListings {
+        .row {
+            margin-top: 10px;
+        }
+        h3 {
+            margin-bottom: 0;
+        }
+        .btns {
+            margin-top: 0;
+        }
+    }
+}
