--- a/public/css/main.less
+++ b/public/css/main.less
@@ -117,3 +117,12 @@ index {
         }
     }
 }
+
+.singleListing {
+    background-color: ivory;
+    padding: 15px;
+
+    p {
+        padding-bottom: 0;
+    }
+}
