--- a/public/views/listing.erb
+++ b/public/views/listing.erb
@@ -14,8 +14,8 @@
                                     <% if is_owner %>                                    
                                     <form id='updateListingForm'>
                                         <input type='hidden' name='listing_id' value='<%=listing._id%>'>
-                                        <input class='form-control' name='title' placeholder='title' value='<%= listing.title %>'>
-                                        <input class='form-control autocompleteAddress' name='where' placeholder='location' value='<%= listing.where %>'>
+                                        <input class='form-control' name='title' placeholder='title' value='<%= listing.title %>' required>
+                                        <input class='form-control autocompleteAddress' name='where' placeholder='location' value='<%= listing.where %>' required>
                                         <textarea class='form-control' placeholder='details' name='details' style='resize: none'><%= listing.details %></textarea>
                                         <button class='btn btn-primary' style='width: 100%'>Update</button>
                                     </form>
