--- a/public/css/main.less
+++ b/public/css/main.less
@@ -67,6 +67,11 @@ index {
 
     #reviewsArea {
         margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    #editProfileSection {
+        margin-top: 30px;
     }
 }
 
