--- a/public/views/edit_user_data_form.erb
+++ b/public/views/edit_user_data_form.erb
@@ -1,4 +1,4 @@
-<section>
+<section id='editProfileSection' class='col-md-12'>
 <h3> Edit your profile</h3>
 <form id='editUserDataForm'>
   <label>Name</label>
