--- a/public/css/main.less
+++ b/public/css/main.less
@@ -109,17 +109,20 @@ index {
         .form-control {
             min-width: 36%;
         }
+    }    
+}
+
+#foundListings {
+    padding-top: 0;
+    padding-bottom: 0;
+    .row {
+        margin-top: 10px;
     }
-    #foundListings {
-        .row {
-            margin-top: 10px;
-        }
-        h3 {
-            margin-bottom: 0;
-        }
-        .btns {
-            margin-top: 0;
-        }
+    h3 {
+        margin-bottom: 0;
+    }
+    .btns {
+        margin-top: 0;
     }
 }
 
