--- a/public/views/user_reviews.erb
+++ b/public/views/user_reviews.erb
@@ -1,4 +1,4 @@
-<div id="reviewsArea">  
+<div id="reviewsArea" class='col-md-12'>  
       <h3> Reviews </h3>
       <h4> Add Review </h4>
       <form id='newReviewForm' method='POST' action=<%='/reviews/user/'+target_user._id%> >              
