--- a/public/views/index.erb
+++ b/public/views/index.erb
@@ -1,4 +1,4 @@
-<index>
+<index id='indexPage'>
   <header class="header-2">
                     <div class="container">
                         <div class="row">
@@ -18,7 +18,7 @@
                                         </li>
                                         <li><a href="#" id='logoutBtn' onclick='logout()'>Logout</a></li>
                                         <% else %>
-                                        <li><a href="#" id='loginBtn' onclick='signup()'>Login/Sign Up</a></li>
+                                        <li><a href="#" id='loginBtn' onclick='signup()'>Login</a></li>
                                         <% end %>
                                     </ul>
                                     <!-- <ul class="subnav">
@@ -46,9 +46,10 @@
                                     </ul> -->
                                 </div>
                             </div>
-                        </div>
+                        </div>                        
                     </div>
                 </header>
+
                 <section class="header-2-sub bg-midnight-blue">
                     <div class="background">
                         &nbsp;
