--- a/public/css/main.less
+++ b/public/css/main.less
@@ -2,7 +2,7 @@ input, span, textarea, button {
     border-radius: 0 !important;
 }
 
-index {
+#indexPage {
     #mainPostForm {
         min-width: 70% !important;
     }    
@@ -14,6 +14,10 @@ index {
     .contacts-2 {
         padding-top: 0;
     }   
+}
+
+.headerInput {
+    margin: 32px 0 30px;
 }
 
 #newOffer {
