--- a/public/views/search.erb
+++ b/public/views/search.erb
@@ -7,7 +7,7 @@
               <h3>Find what people are looking for.</h3>
               <div class="row">
                 <p class="lead col-sm-10 col-sm-offset-1">
-                  Your next customer is waiting.
+                  Your next customer is waiting for you.
                 </p>
               </div>
             </div>
