--- a/public/views/user_reviews.erb
+++ b/public/views/user_reviews.erb
@@ -11,8 +11,9 @@
 
       <div id="reviewsList">
       <% reviews_of_user.each do |rev| %>
-        <div class="col-sm-4">
-            <h6><a href=<%=Links.user(rev.poster._id)%>><%= rev.poster && rev.poster.email %></a></h6>
+        <div class="col-sm-12">
+            <h6><%= erb :user_link, locals: {user: rev.poster} %></h6>
+            <!-- <h6><a href=<%=bp; Links.user(rev.poster._id)%>><%= rev.poster && rev.poster.email %></a></h6> -->
             <%= rev.text * 10 %>
         </div>        
       <% end %>
