--- a/public/views/index.erb
+++ b/public/views/index.erb
@@ -132,11 +132,11 @@
                       </div>
                       <h6>Get in touch</h6>
                       <p>Read reviews and negotiate online to find the match that's best for you.</p>
-                      <div class="links">
+                      <!-- <div class="links">
                         <a href="#"><span class="fui-phone"></span> Call them</a>
                         <br>
                         <a href="#"><span class="fui-mail"></span> Email them</a>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
