--- a/public/css/main.less
+++ b/public/css/main.less
@@ -11,8 +11,11 @@ input, span, textarea, button {
         padding-bottom: 0;
     }
 
+    
+
     .contacts-2 {
         padding-top: 0;
+        padding-bottom: 25px;
     }   
 }
 
@@ -141,4 +144,8 @@ input, span, textarea, button {
 
 .wide {
     width: 100%;
+}
+
+.footer-8 {
+    padding-top: 25px;
 }
